Desafio quase complto

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -22,6 +22,9 @@
 //Select2
 @import "~select2/dist/css/select2.css";
 
+//SummerNote
+@import "~sumernote/dist/summernote.min.css";
+
 
 .select2 {
   width: 100% !important;
